--- a/public/apps/tsumtsum.plist
+++ b/public/apps/tsumtsum.plist
@@ -11,13 +11,13 @@
           <key>kind</key>
           <string>software-package</string>
           <key>url</key>
-          <string>https://your-vercel-domain.com/apps/tsumtsum.ipa</string>
+          <string>https://ipa-installer.vercel.com/apps/tsumtsum.ipa</string>
         </dict>
         <dict>
           <key>kind</key>
           <string>display-image</string>
           <key>url</key>
-          <string>https://your-vercel-domain.com/apps/tsumtsum-icon.png</string>
+          <string>https://ipa-installer.vercel.com/apps/tsumtsum-icon.png</string>
         </dict>
       </array>
       <key>metadata</key>
