--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "uuid": "^9.0.0",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "formidable": "^3.5.0"
   },
   "devDependencies": {
     "eslint": "8.40.0",
