--- a/vercel.json
+++ b/vercel.json
@@ -16,20 +16,26 @@
       "dest": "/_next/static/$1"
     },
     {
-      "src": "/public/(.*)",
-      "dest": "/public/$1"
+      "src": "/_next/(.*)",
+      "dest": "/_next/$1"
+    },
+    {
+      "src": "/apps/(.*)",
+      "dest": "/apps/$1"
+    },
+    {
+      "src": "/uploads/(.*)",
+      "dest": "/uploads/$1"
     },
     {
       "src": "/api/(.*)",
       "dest": "/api/$1"
     },
     {
-      "src": "/app/(.*)",
-      "dest": "/app/$1"
-    },
-    {
       "src": "/(.*)",
       "dest": "/"
     }
-  ]
+  ],
+  "cleanUrls": true,
+  "trailingSlash": false
 }
