--- a/public/apps/esign.plist
+++ b/public/apps/esign.plist
@@ -11,13 +11,13 @@
           <key>kind</key>
           <string>software-package</string>
           <key>url</key>
-          <string>https://ipa-installer.vercel.com/apps/esign.ipa</string>
+          <string>https://ipa-installer-five.vercel.app/apps/esign.ipa</string>
         </dict>
         <dict>
           <key>kind</key>
           <string>display-image</string>
           <key>url</key>
-          <string>https://ipa-installer.vercel.com/apps/esign-icon.png</string>
+          <string>https://ipa-installer-five.vercel.app/apps/esign-icon.png</string>
         </dict>
       </array>
       <key>metadata</key>
