--- a/vercel.json
+++ b/vercel.json
@@ -10,30 +10,30 @@
       "use": "@vercel/node"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/_next/static/(.*)",
-      "dest": "/_next/static/$1"
+      "source": "/_next/static/(.*)",
+      "destination": "/_next/static/$1"
     },
     {
-      "src": "/_next/(.*)",
-      "dest": "/_next/$1"
+      "source": "/_next/(.*)",
+      "destination": "/_next/$1"
     },
     {
-      "src": "/apps/(.*)",
-      "dest": "/apps/$1"
+      "source": "/apps/(.*)",
+      "destination": "/apps/$1"
     },
     {
-      "src": "/uploads/(.*)",
-      "dest": "/uploads/$1"
+      "source": "/uploads/(.*)",
+      "destination": "/uploads/$1"
     },
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
     },
     {
-      "src": "/(.*)",
-      "dest": "/"
+      "source": "/(.*)",
+      "destination": "/"
     }
   ],
   "cleanUrls": true,
