--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "uuid": "^9.0.0",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.1",
     "formidable": "^3.5.0"
   },
   "devDependencies": {
-    "eslint": "8.40.0",
+    "eslint": "^8.40.0",
     "eslint-config-next": "13.4.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "postcss": "^8.4.31",
+    "autoprefixer": "^10.4.15"
   }
 }
